Add cursor to send message button

--- a/style.css
+++ b/style.css
@@ -686,6 +686,7 @@ h1 > span {
 .contact__control button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .contact__invalid-icon {
